<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameOver">

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="top|left|start"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <fragment
            android:id="@+id/fragment22"
            android:name="com.yarahaddad.clickthedot.CurrentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_x="0dp"
        android:layout_y="149dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout11">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="100dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="14sp"
            android:text="@string/GO"
            android:textAllCaps="true"
            android:textSize="36sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:fontFamily="casual"
            tools:layout_editor_absoluteX="82dp"
            tools:layout_editor_absoluteY="144dp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="play"
            android:text="@string/Play"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="260dp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="menu"
            android:text="@string/menu"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="368dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_x="0dp"
        android:layout_y="502dp"
        android:gravity="bottom|left|end"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <fragment
            android:id="@+id/fragment7"
            android:name="com.yarahaddad.clickthedot.LocationTracker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="52dp"
            tools:layout_editor_absoluteY="468dp" />

        <fragment
            android:id="@+id/fragment8"
            android:name="com.yarahaddad.clickthedot.WifiNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="532dp" />

        <fragment
            android:id="@+id/fragment13"
            android:name="com.yarahaddad.clickthedot.WebServer"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            tools:layout_editor_absoluteX="198dp"
            tools:layout_editor_absoluteY="504dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>